--- a/cocoyam-modules/cocoyam-module-auth/pom.xml
+++ b/cocoyam-modules/cocoyam-module-auth/pom.xml
@@ -13,7 +13,12 @@
         <dependency>
             <groupId>io.xiaoyu</groupId>
             <artifactId>cocoyam-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>1.35.0.RC</version>
         </dependency>
     </dependencies>
 
