--- a/cocoyam-serve/pom.xml
+++ b/cocoyam-serve/pom.xml
@@ -15,13 +15,19 @@
         <dependency>
             <groupId>io.xiaoyu</groupId>
             <artifactId>cocoyam-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
         </dependency>
 
 <!--        //????? why 要这么写 才能访问 127.0.0.1:8090/test才能范围其他包的控制器-->
         <dependency>
             <groupId>io.xiaoyu</groupId>
-            <artifactId>cocoyam-module-auth</artifactId>
+            <artifactId>cocoyam-modules</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
