--- a/cocoyam-serve/src/main/resources/application.yaml
+++ b/cocoyam-serve/src/main/resources/application.yaml
@@ -1,2 +1,10 @@
 server:
   port: 8090
+
+# Database connection properties
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/owl9
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
