--- a/cocoyam-common/pom.xml
+++ b/cocoyam-common/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.20</version>
+        </dependency>
+
         <!-- druid -->
 <!--        <dependency>-->
 <!--            <groupId>com.alibaba</groupId>-->
