代码生成器0.7.1版本 代码生成器开发补充common响应开发

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /cocoyam-modules/cocoyam-module-gen/target/
 /cocoyam-modules/cocoyam-module-auth/target/
 /cocoyam-common/target/
+/cocoyam-modules/cocoyam-module-auth/target
