--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /cocoyam-modules/cocoyam-module-auth/target/
 /cocoyam-common/target/
 /cocoyam-modules/cocoyam-module-auth/target
+/cocoyam-serve/target
+/cocoyam-modules/cocoyam-module-gen/target
+/cocoyam-common/target
