--- a/cocoyam-serve/src/main/resources/application.yaml
+++ b/cocoyam-serve/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
   resources:
     static-locations: classpath:/static/
   datasource:
-    url: jdbc:mysql://localhost:3306/yamis
+    url: jdbc:mysql://localhost:3306/owl276
     username: root
-    password: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
