--- a/cocoyam-common/pom.xml
+++ b/cocoyam-common/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <artifactId>cocoyam-common</artifactId>
     <version>1.0</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -79,5 +80,18 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <finalName>cocoyam-common</finalName>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 
 </project>
