--- a/cocoyam-modules/cocoyam-module-auth/pom.xml
+++ b/cocoyam-modules/cocoyam-module-auth/pom.xml
@@ -1,33 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>io.xiaoyu</groupId>
         <artifactId>cocoyam-modules</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <groupId>io.xiaoyu</groupId>
+    <artifactId>cocoyam-module-auth</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>cocoyam-module-auth</name>
+    <description>cocoyam-module-auth</description>
+    <packaging>jar</packaging>
+
     <dependencies>
+        <!-- 添加模块所需的依赖项 -->
         <dependency>
             <groupId>io.xiaoyu</groupId>
             <artifactId>cocoyam-common</artifactId>
             <version>1.0</version>
         </dependency>
+
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot-starter</artifactId>
             <version>1.35.0.RC</version>
         </dependency>
+
+        <!-- 添加其他依赖项 -->
     </dependencies>
 
-    <artifactId>cocoyam-module-auth</artifactId>
-    <packaging>jar</packaging>
-
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
