--- a/cocoyam-modules/pom.xml
+++ b/cocoyam-modules/pom.xml
@@ -1,38 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>io.xiaoyu</groupId>
         <artifactId>cocoyam</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <groupId>io.xiaoyu</groupId>
+    <artifactId>cocoyam-modules</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <name>cocoyam-modules</name>
+    <description>cocoyam-modules</description>
 
     <modules>
         <module>cocoyam-module-auth</module>
-        <module>cocoyam-module-gen</module>
+        <module>cocoyam-module-sys</module>
     </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.xiaoyu</groupId>
-            <artifactId>cocoyam-module-auth</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-
-    </dependencies>
-
-    <artifactId>cocoyam-modules</artifactId>
-
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
