--- a/cocoyam-serve/src/main/resources/application.yaml
+++ b/cocoyam-serve/src/main/resources/application.yaml
@@ -13,3 +13,9 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+# 网站设置
+website:
+  app_name: cocoyam
+  logo: cocoyam
+  footer: cocoyam
