--- a/cocoyam-serve/src/main/resources/application.yaml
+++ b/cocoyam-serve/src/main/resources/application.yaml
@@ -9,9 +9,9 @@ spring:
   resources:
     static-locations: classpath:/static/
   datasource:
-    url: jdbc:mysql://localhost:3306/owl276
-    username: root
-    password: 123456
+    url: jdbc:mysql://106.52.14.176:3306/yamis
+    username: yamis
+    password: yamis123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 # 网站设置
