fix: 🐛登录功能完善 首页控制台开发部分

--- a/cocoyam-modules/cocoyam-module-auth/pom.xml
+++ b/cocoyam-modules/cocoyam-module-auth/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>cocoyam-module-auth</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>cocoyam-module-auth</name>
-    <description>cocoyam-module-auth</description>
+    <description>cocoyam-module-auth</description><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin></plugins></build>
     <packaging>jar</packaging>
 
     <dependencies>
