🔥 [移除代码或文件]忽略文件

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /cocoyam-serve/target
 /cocoyam-modules/cocoyam-module-gen/target
 /cocoyam-common/target
+/cocoyam-modules/cocoyam-module-sys/target
