feat: ✨代码生成器前端界面开发

--- a/cocoyam-modules/pom.xml
+++ b/cocoyam-modules/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>cocoyam-module-auth</module>
         <module>cocoyam-module-sys</module>
+        <module>cocoyam-module-gen</module>
     </modules>
 
     <properties>
