--- a/cocoyam-serve/pom.xml
+++ b/cocoyam-serve/pom.xml
@@ -36,6 +36,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.xiaoyu</groupId>
+            <artifactId>cocoyam-module-gen</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
 
